# python_pw_manager

./: data_manager.py  main.py  password_generator.py  pyproject.toml  validations.py
